# ChangeLog for net-im/psi-chess
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Dec 2010; Nikoli <nikoli@lavabit.com> +psi-chess-0.1.9_pre3410.ebuild:
  version bump

  12 Dec 2010; Nikoli <nikoli@lavabit.com> +psi-chess-0.1.8_pre3377.ebuild:
  version bump

  21 Oct 2010; Nikoli <nikoli@lavabit.com> +psi-chess-0.1.8_pre3076.ebuild:
  version bump
