@@ -1,9 +1,11 @@
 DIST psi-chess-0.1.8_pre3076.tar.xz 197192 RMD160 1bfb3938ed29441aa3de301ef3ec626af5a92abb SHA1 d7ba52e0e0e3743e709277400a105829d091a337 SHA256 108fabdc049d6ac1c31b1e918e3973703b66323257cb71f0b7dc050f2156f3fb
 DIST psi-chess-0.1.8_pre3377.tar.xz 197288 RMD160 24923a1ff623e8079197ff06addfc062a614d084 SHA1 f342bd76289ec944d2a2dbbaf29fc6db85fedc85 SHA256 9f7f7fb81faa68556dbb77905e0597365a4dbba28593338ea08c465f6d4aa7eb
 DIST psi-chess-0.1.9_pre3410.tar.xz 197212 RMD160 6d08b6e1f91ad2340c447e806aeb3308b1cf5111 SHA1 701ecef7694458da3a1a539f00905ed80f6b8c31 SHA256 087521242b9eafe0f9505402407110effc6e6b444702e5b9c37ea10667cf1a38
+DIST psi-chess-0.2.0_pre3567.tar.xz 197048 RMD160 3651a37c434427b0c92d76acb88e1753c865b9b7 SHA1 76ce1eff225a593327092d878b0d973fc01b7a98 SHA256 cb931c39a24908c0521fc5317a3a7311d89097519eb78313d8ffad064ed8f71d
 EBUILD psi-chess-0.1.8_pre3076.ebuild 242 RMD160 c23fe225593395b161113a1b484df2e127d9722d SHA1 b25673997b1d299b70f57cd0dee2db3a6f4943bb SHA256 42dc9c1678db58c6bfea8fd8ea8a7477ddbf7cc207b74148baf4ea72174251e2
 EBUILD psi-chess-0.1.8_pre3377.ebuild 242 RMD160 c23fe225593395b161113a1b484df2e127d9722d SHA1 b25673997b1d299b70f57cd0dee2db3a6f4943bb SHA256 42dc9c1678db58c6bfea8fd8ea8a7477ddbf7cc207b74148baf4ea72174251e2
 EBUILD psi-chess-0.1.9_pre3410.ebuild 242 RMD160 c23fe225593395b161113a1b484df2e127d9722d SHA1 b25673997b1d299b70f57cd0dee2db3a6f4943bb SHA256 42dc9c1678db58c6bfea8fd8ea8a7477ddbf7cc207b74148baf4ea72174251e2
+EBUILD psi-chess-0.2.0_pre3567.ebuild 242 RMD160 51108a780eab87224c93f29b3d840e7f45f3b440 SHA1 e72ac50fd2bc5ea26b7be22b6ca2a17cf3c37fd3 SHA256 39d4badb9db7570f6c072d1e8f6b38167b752c790001729159ce0bcc9e4a1732
 EBUILD psi-chess-9999.ebuild 233 RMD160 0a61dcdc7866dccbd7dbeb972b07f41bcfd05c35 SHA1 5899781aa4ac28cbeb2f7220e9c1178501299063 SHA256 bc6d432895be738ec61ca9317346af8408645a2b2de59e9a8c8334e43b162aa0
-MISC ChangeLog 393 RMD160 2dc979b2cb28b802fda4b00de077a7ee5531f417 SHA1 e63a40e559f10b4f96b1a5adc92cdc8bb610e95d SHA256 ab45f48e80bb1b1c69b2afbeb2b35f3456d8e6daf3457b80778be0c135ece231
+MISC ChangeLog 485 RMD160 f5afea0a57a264feab4e002911d1888ea78cf2c9 SHA1 38f66740722fc813a193cbf5821da3496e9d9cc4 SHA256 2a90d130b52751a9efc410a661d177d97156ede59468c05cd60ada0cd2c5fdcf
 MISC metadata.xml 367 RMD160 924f1fdf4d4d11e021f2e80c7a6e4cfd22b0fe70 SHA1 49627813c6410f2730e4513da4c937694088dc28 SHA256 cb46ff0c59b6544692e86a468fb6556c6f0bc72c318ffbbb6399762082737db9
